--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal2009X</title>
-	  <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTluj7eyFt5FMRiaUU4hpISbQqh2lh1HUkczQ&s">
+	  <link rel="icon" type="image/x-icon" href="./icon.png">
     <style>
         body {
         	background-color: black;
