--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
     </div>
     
     <script>
-    
 let version = '1.00.00'    
 
 const displayArea = document.getElementById('displayArea');
@@ -141,7 +140,7 @@ async function fetchURL(url) {
         const data = await response.text();
         return data;
     } catch (error) {
-        console.error("Failed to fetch code for Default Commands:", error);
+        say("Failed to fetch code for Default Commands:" + error, "rgba(231,72,86,255)");
     }
 }
 
@@ -198,7 +197,7 @@ if (input === "/mod") {
 setTimeout(() => { say("HackerTyper Mode Starting in 1", "lightgray") }, 00)
 setTimeout(() => { say("HackerTyper Mode Starting in 2", "lightgray") }, 500)
 setTimeout(() => { say("HackerTyper Mode Starting..", "lightgray") }, 1000)
-setTimeout(() => { say("Reload the page to exit.", "red") }, 1100)
+setTimeout(() => { say("Reload the page to exit.", "rgba(231,72,86,255)") }, 1100)
 setTimeout(() => {
 confirmHackerTyperMode = true
 
@@ -229,6 +228,10 @@ setTimeout(() => {inputArea.value = "";}, 4700)
     }
 }
 inputArea.addEventListener('keydown', function(event) {
+if (event.key === "Escape") {
+	closeSettingsMenu();
+	return;
+}
 if (hackerTyperMode === true) return;
     if (event.key === 'Enter') {
         event.preventDefault();
@@ -322,7 +325,7 @@ setTimeout(() => {
 }, 260);
 
 setTimeout(() => {
-  say("   Type '/help' for a list of commands.");
+  say("   Type '/help' for a list of commands.", "Darkgrey");
 }, 300);
 }
 
@@ -374,7 +377,7 @@ async function fetchHackerCode() {
         hackerCode = await response.text();
         currentIndex = 0;
     } catch (error) {
-        say("Failed to fetch code for HackerTyper.", "red");
+        say("Failed to fetch code for HackerTyper.", "rgba(231,72,86,255)");
     }
 }
 
@@ -420,20 +423,20 @@ async function commandFake2(time) {
     try {
         const response = await fetch("https://raw.githubusercontent.com/Orzubek2009/js/refs/heads/main/assets/random.py");
         const fakeCode = await response.text();
-        const fakeLines = fakeCode.split('\n'); // Split the code into lines
+        const fakeLines = fakeCode.split('\n');
         let currentFakeLine = 0;
 
         function displayFakeCode() {
             if (currentFakeLine < fakeLines.length) {
                 say(fakeLines[currentFakeLine], "lightgray");
                 currentFakeLine++;
-                setTimeout(displayFakeCode, time); // Adjust the interval as needed
+                setTimeout(displayFakeCode, time);
             }
         }
 
         displayFakeCode();
     } catch (error) {
-        say("Failed to fetch code for /fake2.", "red");
+        say("Failed to fetch code for /fake2.", "rgba(231,72,86,255)");
     }
 }
 
